# aoc2021

./: .replit  1.1.py  1.2.py  main.py  p10_1.py  p10_2.py  p11_1.py  p11_2.py  p12_1.py  p12_2.py  p13_1.py  p14_1.py  p14_2.py  p15_1.py  p15_2.py  p16_1.py  p16_2.py  p1_1.py  p1_2.py  p2_1.py  p2_2.py  p3_1.py  p3_2.py  p4_1.py  p4_2.py  p5_1.py  p5_2.py  p6_1.py  p6_2.py  p7_1.py  p7_2.py  p8_1.py  p8_2.py  p9_1.py  p9_2.py  pyproject.toml
